fix: cloud too far off screen

--- a/src/components/Cloud/Cloud.module.scss
+++ b/src/components/Cloud/Cloud.module.scss
@@ -3,7 +3,7 @@
     transform: translateX(-100%); 
   }
   100% {
-    transform: translateX(100vw);
+    transform: translateX(50vw);
   }
 }
 
